Fix the int validator not handling the locale

Task-number: QTBUG-3179
Reviewed-by: ogoffart